# ioBroker.vw-connect

./: .eslintignore  .eslintrc.json  .gitignore  .npmignore  .prettierrc.js  .travis.yml  LICENSE  README.md  eslint.config.cjs  gulpfile.js  io-package.json  main.js  main.test.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.docu/myskoda-main/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.docu/myskoda-main/.github/: dependabot.yml  release.yml
.docu/myskoda-main/docs/: api_endpoints.md  events.md  fetching_data.md  mqtt.md  primer.md  refreshing_data.md  rest.md
.docu/myskoda-main/fixtures/: citigoe_iv_2020_ne132e2.yaml  citigoe_iv_2020_ne14e2_style.yaml  citigoe_iv_2021_ne14e2_best_of.yaml  djapollo_enyaq_5AZJK2_85.yaml  elroq_2025_PYLJK2_85.yaml  elroq_2025_PYLQK2_Sportline.yaml  enyaq_2023_5AZJJ2_80.yaml  enyaq_2024_5AZJK2_85.yaml  enyaq_2025_5azjk2_85.yaml  kamiq_2021_NW44KD_crossover.yaml  karoq_2020_nu74nd_businessline.yaml  karoq_2022_nu74nv_se_l_expired_subscription.yaml  karoq_2023_NU74MD_se_l.yaml  kodiaq_2023_NS74QZ_style.yaml  kodiaq_2024_ps7d6z_exclusive.yaml  kodiaq_iv_2024_ps7dyc_selection.yaml  octavia_2021_NX54ED_style.yaml  octavia_2022_NX34ED_cng.yaml  octavia_2022_NX36QD_rs_plus.yaml  octavia_2023_NX34JD_style.yaml  octavia_2023_NX53L5_combi.yaml  octavia_2024_NX53L5_combi.yaml  octavia_iv_2021_nx56xc_combi_rs.yaml  octavia_iv_2022_nx34vc_liftback_style.yaml  prior99_enyaq_2024_5AZFF2_60_idle_full_battery.yaml  prior99_octavia_2018_5E535D_ambition.yaml  sonar98_enyaq_2022_5AZJJ2_80.yaml  superb_2024_3v35wz_liftback_l_and_k.yaml  superb_iv_2020_3v35xc_liftback_l_and_k.yaml  superb_iv_2021_3v54xc_style.yaml  superb_iv_2025_nz3dyc_liftback_style.yaml  superb_iv_2025_nz5ddd_combi_edition_130.yaml  superb_iv_combi_2022_3V53XC_clever_standing_still.yaml  webspider_enyaq_2021_5AZJJ2_80.yaml
.docu/myskoda-main/myskoda/: __init__.py  __version__.py  anonymize.py  const.py  mqtt.py  myskoda.py  rest_api.py  utils.py  vehicle.py
.docu/myskoda-main/scripts/: __init__.py  gen_ref_nav.py
.docu/myskoda-main/tests/: conftest.py  test_auth.py  test_driving_range.py  test_generated.py  test_mqtt.py  test_operations.py  test_rest_api.py  test_service_event.py  test_status.py  test_trip_statistics.py  test_utils.py
(+33740 files in other folders)
