[project]
name = "myskoda"
dynamic = ["version"]
description = "Library for interaction with the MySkoda APIs."
authors = [
  { name = "Frederick Gnodtke", email = "frederick@gnodtke.net" },
  { name = "WebSpider", email = "bacardicoke@gmail.com" },
  { name = "Fabrice Devaux", email = "fabrice.devaux@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
  "aiohttp ~=3.11",
  "aiomqtt ~=2.2",
  "asyncio ~=3.4",
  "mashumaro[orjson] ~=3.13",
  "pyjwt ~=2.12",
  "pyyaml ~=6.0",
]

[dependency-groups]
dev = [
  "aioresponses ~=0.7",
  "pyright ~=1.1",
  "pytest>=8,<10",
  "pytest-asyncio>=0,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6.4,<0.16.0",
  "setuptools>=75.2,<83.0",
]

[project.optional-dependencies]
cli = [
  "asyncclick ~=8.1",
  "coloredlogs ~=15.0",
  "termcolor ~=3.0",
  "pygments ~=2.18",
  "python-dateutil ~=2.9",
]
docs = [
  "mkdocs ~=1.6",
  "mkdocstrings[python]>=0.26.1,<1.1.0",
  "mkdocs-gen-files ~=0.5",
  "mkdocs-literate-nav ~=0.6",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.scripts]
myskoda = "myskoda.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = [
  "COM812", # missing-trailing-comma
  "D101",   # undocumented-public-class
  "D107",   # undocumented-public-init
  "D203",   # one-blank-line-before-class
  "D211",   # blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "S101",   # assert (used in tests)
  "T201",   # print
  "TD003",  # missing-todo-link
]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/test_*.py" = ["D"]
"myskoda/cli/*" = ["D"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"

[tool.coverage.run]
omit = ["myskoda/cli/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
